--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,13 +14,17 @@
   "devDependencies": {
     "@types/lodash.merge": "^4.6.7",
     "@types/node": "^20.4.5",
+    "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.0",
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
-    "lodash.merge": "^4.6.2"
+    "graphql-tag": "^2.12.6",
+    "lodash.merge": "^4.6.2",
+    "ts-node": "^10.9.1"
   }
 }
