--- a/backend/package.json
+++ b/backend/package.json
@@ -2,29 +2,21 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "devDependencies": {
-    "@types/lodash.merge": "^4.6.7",
-    "@types/node": "^20.4.5",
+    "@types/express": "^4.17.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@graphql-tools/schema": "^10.0.0",
-    "apollo-server-core": "^3.12.0",
-    "apollo-server-express": "^3.12.0",
-    "express": "^4.18.2",
-    "graphql": "^16.7.1",
-    "graphql-tag": "^2.12.6",
-    "lodash.merge": "^4.6.2",
+    "express": "^4.17.1",
     "ts-node": "^10.9.1"
   }
 }
