--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,11 @@
-// The tsconfig.json file enables you to configure how TypeScript will compile your code. Add the following configuration to your tsconfig.json file
 {
     "compilerOptions": {
-      "rootDirs": ["src"],
-      "outDir": "dist",
-      "lib": ["es2020"],
-      "target": "es2020",
-      "module": "esnext",
-      "moduleResolution": "node",
+      "module": "commonjs",
       "esModuleInterop": true,
-      "types": ["node"]
-    }
+      "target": "es6",
+      "moduleResolution": "node",
+      "sourceMap": true,
+      "outDir": "dist"
+    },
+    "lib": ["es2015"]
   }
