package.json scripts, tsconfig changed and necessary packages have been installed

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,24 @@
+// {
+//     "compilerOptions": {
+//       "module": "commonjs",
+//       "esModuleInterop": true,
+//       "target": "es6",
+//       "moduleResolution": "node",
+//       "sourceMap": true,
+//       "outDir": "dist"
+//     },
+//     "lib": ["es2015"]
+//   }
+
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "target": "es6",
-      "moduleResolution": "node",
-      "sourceMap": true,
-      "outDir": "dist"
-    },
-    "lib": ["es2015"]
+  "compilerOptions": {
+    "rootDirs": ["src"],
+    "outDir": "dist",
+    "lib": ["es2020"],
+    "target": "es2020",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "types": ["node"]
   }
+}
