--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "tsc",
+    "start": "npm run compile && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "@types/node": "^20.4.5",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.0",
     "express": "^4.17.1",
+    "graphql": "^16.7.1",
     "ts-node": "^10.9.1"
-  }
+  },
+  "type": "module"
 }
