--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.1",
+    "@types/lodash.merge": "^4.6.7",
     "@types/node": "^20.4.5",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "@apollo/server": "^4.9.0",
+    "@graphql-tools/schema": "^10.0.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^16.7.1",
+    "lodash.merge": "^4.6.2",
     "ts-node": "^10.9.1"
   },
   "type": "module"
