--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,6 +19,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "types": ["node"]
+    "types": ["node"],
+    "noEmit": true,
+    "allowImportingTsExtensions": true
   }
 }
