--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@graphql-tools/schema": "^10.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "graphql": "^16.7.1",
     "lodash.merge": "^4.6.2",
