--- a/backend/package.json
+++ b/backend/package.json
@@ -4,28 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "tsc",
-    "start": "npm run compile && nodemon ./dist/index.js"
+    "start": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.1",
-    "@types/lodash.merge": "^4.6.7",
-    "@types/node": "^20.4.5",
-    "nodemon": "^3.0.1",
-    "typescript": "^5.1.6"
-  },
   "dependencies": {
-    "@apollo/server": "^4.9.0",
-    "@graphql-tools/schema": "^10.0.0",
-    "body-parser": "^1.20.2",
+    "@apollo/server": "^4.2.1",
+    "@graphql-tools/schema": "^8.5.0",
+    "@prisma/client": "^4.0.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.17.1",
-    "graphql": "^16.7.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "graphql": "^16.5.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.9.1",
     "lodash.merge": "^4.6.2",
-    "ts-node": "^10.9.1"
+    "next-auth": "^4.10.3",
+    "ws": "^8.8.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/lodash.merge": "^4.6.7",
+    "@types/ws": "^8.5.3",
+    "nodemon": "^2.0.18",
+    "prisma": "^4.0.0",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.8.3"
   }
 }
