--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,17 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.0.0",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
+    "bson": "^4.7.0",
+    "date-fns": "^2.29.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
-    "graphql": "^16.7.1",
+    "graphql": "^16.6.0",
+    "graphql-ws": "^5.11.2",
     "next": "13.4.12",
-    "next-auth": "^4.22.3",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -31,6 +31,11 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.17",
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
     "prisma": "^5.0.0"
   }
 }
