--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "imessage-graphql",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,33 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.17",
-    "@chakra-ui/react": "^2.8.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@apollo/client": "^3.7.1",
+    "@chakra-ui/react": "^2.4.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^4.7.1",
     "bson": "^4.7.0",
     "date-fns": "^2.29.3",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "framer-motion": "^10.15.0",
+    "framer-motion": "^7.6.18",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.11.2",
-    "next": "13.4.12",
-    "next-auth": "^4.10.3",
+    "next": "13.0.6",
+    "next-auth": "^4.18.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
-    "typescript": "5.1.6"
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
+    "@types/node": "18.11.10",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "prisma": "^5.0.0"
+    "prisma": "^4.7.1",
+    "typescript": "4.9.3"
   }
 }
