--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.5",
     "@apollo/server": "^4.2.1",
     "@graphql-tools/schema": "^8.5.0",
-    "@prisma/client": "^4.0.0",
+    "@prisma/client": "^5.1.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -30,7 +31,7 @@
     "@types/lodash.merge": "^4.6.7",
     "@types/ws": "^8.5.3",
     "nodemon": "^2.0.18",
-    "prisma": "^4.0.0",
+    "prisma": "^5.1.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.8.3"
   }
